alter name of project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nest-ecommrece-backend",
+  "name": "nest-ecommerce-backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
